CAY-2616 Modeler: Wrong handling of path with spaces
CAY-2618 Unstable property ordering in generated classes
CAY-2619 "to-dep PK" related dbimport delta confuses the Modeler
CAY-2624 SelectQuery "having" qualifier is not considered when calculating cache key
CAY-2627 Modeler: ObjRelationship creation dialog ignores delete rule

----------------------------------
Release: 4.1.B2
Date: May 4, 2019
----------------------------------

Changes:

CAY-2570 Use MySQL adapter for latest versions of MariaDB

Bug Fixes:

CAY-2506 Java class generated for Embeddable object is not serializable
CAY-2538 Modeler: dbImport configuration unclear behavior
CAY-2550 Modeler: ObjAttribute inspector modifies wrong columns in attribute table
CAY-2559 Modeler: Warning dialog shows wrong information after changing target entity in dbRelationship
CAY-2561 Modeler: cgen type combobox doesn't set templates
CAY-2564 No import for Property after generation classes with pk properties
CAY-2566 Flush action generates update for PK attribute in case of toDepPK relationship
CAY-2568 Class Generation: Superclass Package setting persistence
CAY-2569 Custom 'Naming Strategy' in Cayenne Modeler
CAY-2572 Queries are not sorted by name in data map XML

----------------------------------
Release: 4.1.B1
Date: March 7, 2019
----------------------------------
Changes/New Features:

CAY-2446 Run Disjoint By Id queries outside of synchronized block
CAY-2447 Crypto support for LocalDateTime
CAY-2471 Support multiple XML project versions
CAY-2473 Modeler: cleanup attributes and relationship editors
CAY-2474 Modeler: swap buttons in dialog toolbar
CAY-2475 Modeler: move inheritance icon to name column in objAttr table and objRel table
CAY-2478 cgen: Generate properties for PK
CAY-2481 Support for Object[] as return type in SQLTemplate and SQLExec
CAY-2485 Compact Slf4j Logger
CAY-2487 Removed usage of CayenneException.
CAY-2489 Add validation to the case of not to PK relationships